# FreeType

./: CMakeLists.txt  README
include/freetype/config/: ftmodule.h
